# Election_municipale

BV/: Makefile  fich.txt  projet-c-.glade.bak  projet-c-.gladep
BV MARIEM/: projet-c-.glade
BV1/: BV  BV.h.gch  BV.txt  GDU.h  main.c  makefile  user.txt
BVinteg/: config.status
ahmedproj/: tachereclamtion.glade  tachereclamtion.glade.bak  tachereclamtion.gladep.bak
elections/: Makefile.am  configure.in  elections.glade.bak  elections.gladep.bak
project1/: project1.glade  project1.glade.bak
project2/: GDU.txt  GDU2.txt  election.txt  fich.txt  project2.glade.bak  reclamation.txt
project2afim/: GDU2.txt  project2.glade.bak
project2apm/: GDU.txt  project2.glade.bak
project2ath/: GDU.txt  GDU2.txt  project2.glade.bak
project2cath/: GDU.txt  project2.glade.bak
project2igdh/: GDU.txt  GDU2.txt  election.txt  project2.glade.bak
project2inshf/: election.txt  project2.glade
project2mahm/: GDU2.txt  Makefile  election.txt  fich.txt  project2.glade
project2mda/: project2.glade
project2mpds/: GDU.txt  election.txt  project2.glade.bak
project2mpri/: GDU.txt  project2.glade.bak
project2mpri2/: GDU.txt  project2.glade.bak
project2mts/: GDU.txt  GDU2.txt
project2neks/: GDU.txt  project2.glade  reclamation.txt
project2tc/: GDU.txt  GDU2.txt  project2.glade
project2valid/: GDU2.txt  fichelect.txt  project2.glade  reclamation.txt
project2valid/src/: BV.c  Makefile  Makefile.am  callbacks.c  callbacks.h  electionsfat.c  interface.c  interface.h  main.c  project2  reclamation.c
project2valid/src/.deps/: BV.Po  GDU.Po  electionsfat.Po
(+256 files in other folders)
